--- a/admin.html
+++ b/admin.html
@@ -1,10 +1,11 @@
 <head>
     <script src="scripts/main.js" type="text/javascript"></script>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/tailwindcss@^1	.0/dist/tailwind.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.1/web3.min.js"
         integrity="sha512-5erpERW8MxcHDF7Xea9eBQPiRtxbse70pFcaHJuOhdEBQeAxGQjUwgJbuBDWve+xP/u5IoJbKjyJk50qCnMD7A=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta charset="UTF-8">
+	<script type="module" src="scripts/index.js"></script>
 </head>
 
 <nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6">
@@ -26,28 +27,30 @@
   <body>
     <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
 		<div class="max-w-md w-full space-y-8">
-
 			<div class="rounded bg-white max-w-md rounded overflow-hidden shadow-xl p-5">
 
 				<form class="space-y-4" action="#" method="POST">
-					<input type="hidden" name="remember" value="True">
 					<div class="rounded-md shadow-sm -space-y-px">
 						<div class="grid gap-6">
 							<div class="col-span-12">
 								<label for="nom" class="block text-sm font-medium text-gray-700">Nom</label>
-								<input type="text" name="nom" id="nom" autocomplete="given-name" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+								<input type="text" name="nom" id="nom" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
 							<div class="col-span-12">
 								<label for="prenom" class="block text-sm font-medium text-gray-700">Prénom</label>
-								<input type="text" name="prenom" id="prenom" autocomplete="email" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+								<input type="text" name="prenom" id="prenom" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
                             <div class="col-span-12">
 								<label for="promo" class="block text-sm font-medium text-gray-700">Promo</label>
-								<input type="text" name="promo" id="promo" autocomplete="given-name" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+								<input type="text" name="promo" id="promo" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
                             <div class="col-span-12">
 								<label for="annee" class="block text-sm font-medium text-gray-700">Année</label>
-								<input type="text" name="annee" id="annee" autocomplete="given-name" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+								<input type="text" name="annee" id="annee" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+							</div>
+                            <div class="col-span-12">
+								<label for="adresse" class="block text-sm font-medium text-gray-700">Adresse ETH de l'élève</label>
+								<input type="text" name="adresse" id="adresse" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
 						</div>
 					</div>
@@ -60,4 +63,56 @@
 				</form>
 		</div>
 	</div>
+
+	<main class="p-10 flex justify-center min-h-full">
+		<div class="w-4/5">
+		  <div class="mb-10">
+			<input type="text" id="wallet_address" autofocus autocomplete="off" value="0x80efF130ddE6223a10e6ab27e35ee9456b635cCD" placeholder="Wallet address" class="w-2/5 border-2 border-blue-500 px-4 py-1 uppercase rounded-md text-xl text-blue-800 font-semibold outline-none">
+	
+			<button id="load_button" class="border-2 border-blue-500 bg-blue-700 text-white transition-colors px-4 outline-none py-1 uppercase rounded-md text-xl font-semibold">
+			  Load Space Punk NFTs
+			</button>
+		  </div>
+	
+		  <div id="nfts" class="flex gap-7 flex-wrap"></div>
+		</div>
+	  </main>
+	
+	  <template id="nft_template">
+		<section>
+		  <h1 class="font-bold bg-yellow-500 text-white text-center rounded-t-md"></h1>
+	
+		  <a href="" target="_blank">
+			<img class="rounded-b-md w-40 h-40" src="" alt="">
+		  </a>
+		</section>
+	  </template>
+
+	  <table class="table-auto">
+		<thead>
+		  <tr>
+			<th>Song</th>
+			<th>Artist</th>
+			<th>Year</th>
+		  </tr>
+		</thead>
+		<tbody>
+		  <tr>
+			<td>The Sliding Mr. Bones (Next Stop, Pottersville)</td>
+			<td>Malcolm Lockyer</td>
+			<td>1961</td>
+		  </tr>
+		  <tr>
+			<td>Witchy Woman</td>
+			<td>The Eagles</td>
+			<td>1972</td>
+		  </tr>
+		  <tr>
+			<td>Shining Star</td>
+			<td>Earth, Wind, and Fire</td>
+			<td>1975</td>
+		  </tr>
+		</tbody>
+	  </table>
+	
   </body>
