--- a/admin.html
+++ b/admin.html
@@ -1,12 +1,10 @@
 <head>
-    <script src="scripts/main.js" type="text/javascript"></script>
-    <link href="https://unpkg.com/tailwindcss@^1	.0/dist/tailwind.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.1/web3.min.js"
-        integrity="sha512-5erpERW8MxcHDF7Xea9eBQPiRtxbse70pFcaHJuOhdEBQeAxGQjUwgJbuBDWve+xP/u5IoJbKjyJk50qCnMD7A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <meta charset="UTF-8">
-	<script type="module" src="scripts/index.js"></script>
-</head>
+	<script src="scripts/main.js" type="text/javascript"></script>
+	<link href="https://unpkg.com/tailwindcss@^1	.0/dist/tailwind.min.css" rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.0-rc.0/web3.min.js"></script>
+	<meta charset="UTF-8">
+  <script type="module" src="scripts/index.js"></script>
+  </head>
 
 <nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
@@ -57,62 +55,127 @@
 
 					<div>
 						<button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
-							Generate diploma
+							Générer un diplôme
 						</button>
 					</div>
 				</form>
 		</div>
 	</div>
 
-	<main class="p-10 flex justify-center min-h-full">
-		<div class="w-4/5">
-		  <div class="mb-10">
-			<input type="text" id="wallet_address" autofocus autocomplete="off" value="0x80efF130ddE6223a10e6ab27e35ee9456b635cCD" placeholder="Wallet address" class="w-2/5 border-2 border-blue-500 px-4 py-1 uppercase rounded-md text-xl text-blue-800 font-semibold outline-none">
-	
-			<button id="load_button" class="border-2 border-blue-500 bg-blue-700 text-white transition-colors px-4 outline-none py-1 uppercase rounded-md text-xl font-semibold">
-			  Load Space Punk NFTs
-			</button>
-		  </div>
-	
-		  <div id="nfts" class="flex gap-7 flex-wrap"></div>
-		</div>
-	  </main>
-	
-	  <template id="nft_template">
-		<section>
-		  <h1 class="font-bold bg-yellow-500 text-white text-center rounded-t-md"></h1>
-	
-		  <a href="" target="_blank">
-			<img class="rounded-b-md w-40 h-40" src="" alt="">
-		  </a>
-		</section>
-	  </template>
-
-	  <table class="table-auto">
-		<thead>
-		  <tr>
-			<th>Song</th>
-			<th>Artist</th>
-			<th>Year</th>
-		  </tr>
-		</thead>
-		<tbody>
-		  <tr>
-			<td>The Sliding Mr. Bones (Next Stop, Pottersville)</td>
-			<td>Malcolm Lockyer</td>
-			<td>1961</td>
-		  </tr>
-		  <tr>
-			<td>Witchy Woman</td>
-			<td>The Eagles</td>
-			<td>1972</td>
-		  </tr>
-		  <tr>
-			<td>Shining Star</td>
-			<td>Earth, Wind, and Fire</td>
-			<td>1975</td>
-		  </tr>
-		</tbody>
-	  </table>
+	  <!-- component -->
+<section class="antialiased text-gray-600 h-screen px-4">
+    <div class="flex flex-col justify-center h-full">
+        <!-- Table -->
+        <div class="w-full max-w-2xl mx-auto bg-white shadow-lg rounded-sm border border-gray-200">
+            <header class="px-5 py-4 border-b border-gray-100">
+                <h2 class="font-semibold text-gray-800">Diplômés</h2>
+            </header>
+            <div class="p-3">
+                <div class="overflow-x-auto">
+                    <table class="table-auto w-full">
+                        <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-50">
+                            <tr>
+                                <th class="p-2 whitespace-nowrap">
+                                    <div class="font-semibold text-left">Nom</div>
+                                </th>
+                                <th class="p-2 whitespace-nowrap">
+                                    <div class="font-semibold text-left">Promo</div>
+                                </th>
+                                <th class="p-2 whitespace-nowrap">
+                                    <div class="font-semibold text-left">Année</div>
+                                </th>
+                                <th class="p-2 whitespace-nowrap">
+                                    <div class="font-semibold text-center">Adresse ETH</div>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-sm divide-y divide-gray-100">
+                            <tr>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="flex items-center">
+                                        <div class="font-medium text-gray-800">Alex Shatov</div>
+                                    </div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left">III</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left font-medium ">2021</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-lg text-center">73543</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="flex items-center">
+                                        <div class="font-medium text-gray-800">Philip Harbach</div>
+                                    </div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left">III</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left font-medium ">2021</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-lg text-center">45375342</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="flex items-center">
+                                        <div class="font-medium text-gray-800">Mirko Fisuk</div>
+                                    </div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left">III</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left font-medium ">2021</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-lg text-center">434368754</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="flex items-center">
+                                        <div class="font-medium text-gray-800">Olga Semklo</div>
+                                    </div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left">III</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left font-medium ">2021</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-lg text-center">438734</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="flex items-center">
+                                        <div class="font-medium text-gray-800">Burak Long</div>
+                                    </div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left">III</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-left font-medium ">2021</div>
+                                </td>
+                                <td class="p-2 whitespace-nowrap">
+                                    <div class="text-lg text-center">156473</div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 	
   </body>
