--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <head>
-    <script src="scripts/main.js" type="text/javascript"></script>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.1/web3.min.js"
-        integrity="sha512-5erpERW8MxcHDF7Xea9eBQPiRtxbse70pFcaHJuOhdEBQeAxGQjUwgJbuBDWve+xP/u5IoJbKjyJk50qCnMD7A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <meta charset="UTF-8">
+  <script src="scripts/main.js" type="text/javascript"></script>
+  <link href="https://unpkg.com/tailwindcss@^1	.0/dist/tailwind.min.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.0-rc.0/web3.min.js"></script>
+  <meta charset="UTF-8">
+<script type="module" src="scripts/index.js"></script>
 </head>
 
 <nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6">
@@ -25,7 +24,29 @@
 
 <body class="h-full">
 
-    <div class="
+  <main class="p-10 flex justify-center min-h-full">
+		<div class="w-4/5">
+		  <div class="mb-10">	
+			<button id="load_button" class="border-2 border-blue-500 bg-blue-700 text-white transition-colors px-4 outline-none py-1 uppercase rounded-md text-xl font-semibold">
+			  Load NFTs
+			</button>
+		  </div>
+	
+		  <div id="nfts" class="flex gap-7 flex-wrap"></div>
+		</div>
+	  </main>
+	
+	  <template id="nft_template">
+		<section>
+		  <h1 class="font-bold bg-yellow-500 text-white text-center rounded-t-md"></h1>
+	
+		  <a href="" target="_blank">
+			<img class="rounded-b-md w-40 h-40" src="" alt="">
+		  </a>
+		</section>
+	  </template>
+
+    <!-- <div class="
         flex
         w-full
         h-full
@@ -35,7 +56,7 @@
         space-x-4
       ">
         <div class="flex flex-col space-y-6">
-            <!-- <div class="flex flex-col space-y-2">
+            <div class="flex flex-col space-y-2">
                 <button onclick="loginWithEth()" class="
               rounded
               bg-white
@@ -52,13 +73,13 @@
                 <button id="logoutButton" onclick="logout()" class="hidden text-blue-500 underline">
                     Logout
                 </button>
-            </div> -->
+            </div> 
             <button id="getContractInfo" onclick="getContractSymbol()"
                 class="rounded bg-blue-500 hover:bg-blue-700 py-2 px-4 text-white">
                 Get Contract Symbol
             </button>
             <div class="flex flex-col space-y-2"></div>
         </div>
-    </div>
+    </div>-->
        
 </body>
