--- a/admin.html
+++ b/admin.html
@@ -3,179 +3,189 @@
 	<link href="https://unpkg.com/tailwindcss@^1	.0/dist/tailwind.min.css" rel="stylesheet" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.0-rc.0/web3.min.js"></script>
 	<meta charset="UTF-8">
-  <script type="module" src="scripts/index.js"></script>
-  </head>
+	<script type="module" src="scripts/index.js"></script>
+</head>
 
 <nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6">
-    <div class="flex items-center flex-shrink-0 text-white mr-6">
-      <span class="font-semibold text-xl tracking-tight">NFT Diploma</span>
-    </div>
-    <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-      <div class="text-sm lg:flex-grow">
-        <a href="index.html" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Diploma</a>
-        <a href="admin.html" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Admin</a>
-      </div>
-      <div>
-        <p id="userAddress" class="inline-block text-sm px-4 py-2 leading-none text-white"></p>
-        <a onclick="loginWithEth()" href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Login</a>
-      </div>
-    </div>
-  </nav>
+	<div class="flex items-center flex-shrink-0 text-white mr-6">
+		<span class="font-semibold text-xl tracking-tight">NFT Diploma</span>
+	</div>
+	<div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+		<div class="text-sm lg:flex-grow">
+			<a href="index.html"
+				class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Diploma</a>
+			<a href="admin.html"
+				class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Admin</a>
+		</div>
+		<div>
+			<p id="userAddress" class="inline-block text-sm px-4 py-2 leading-none text-white"></p>
+			<a onclick="loginWithEth()" href="#"
+				class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Login</a>
+		</div>
+	</div>
+</nav>
 
-  <body>
-    <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+<body>
+	<div class="contact-form min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
 		<div class="max-w-md w-full space-y-8">
-			<div class="rounded bg-white max-w-md rounded overflow-hidden shadow-xl p-5">
+			<div class=" rounded bg-white max-w-md rounded overflow-hidden shadow-xl p-5">
 
-				<form class="space-y-4" action="#" method="POST">
+				<form class="space-y-4">
 					<div class="rounded-md shadow-sm -space-y-px">
 						<div class="grid gap-6">
 							<div class="col-span-12">
 								<label for="nom" class="block text-sm font-medium text-gray-700">Nom</label>
-								<input type="text" name="nom" id="nom" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+								<input type="text" name="nom" id="nom"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
 							<div class="col-span-12">
 								<label for="prenom" class="block text-sm font-medium text-gray-700">Prénom</label>
-								<input type="text" name="prenom" id="prenom" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+								<input type="text" name="prenom" id="prenom"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
-                            <div class="col-span-12">
+							<div class="col-span-12">
 								<label for="promo" class="block text-sm font-medium text-gray-700">Promo</label>
-								<input type="text" name="promo" id="promo" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+								<input type="text" name="promo" id="promo"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
-                            <div class="col-span-12">
+							<div class="col-span-12">
 								<label for="annee" class="block text-sm font-medium text-gray-700">Année</label>
-								<input type="text" name="annee" id="annee" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+								<input type="text" name="annee" id="annee"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
-                            <div class="col-span-12">
-								<label for="adresse" class="block text-sm font-medium text-gray-700">Adresse ETH de l'élève</label>
-								<input type="text" name="adresse" id="adresse" class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+							<div class="col-span-12">
+								<label for="adresse" class="block text-sm font-medium text-gray-700">Adresse ETH de
+									l'élève</label>
+								<input type="text" name="adresse" id="adresse"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
 						</div>
 					</div>
 
 					<div>
-						<button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
+						<button type="submit"
+							class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
 							Générer un diplôme
 						</button>
 					</div>
 				</form>
+			</div>
 		</div>
-	</div>
 
-	  <!-- component -->
-<section class="antialiased text-gray-600 h-screen px-4">
-    <div class="flex flex-col justify-center h-full">
-        <!-- Table -->
-        <div class="w-full max-w-2xl mx-auto bg-white shadow-lg rounded-sm border border-gray-200">
-            <header class="px-5 py-4 border-b border-gray-100">
-                <h2 class="font-semibold text-gray-800">Diplômés</h2>
-            </header>
-            <div class="p-3">
-                <div class="overflow-x-auto">
-                    <table class="table-auto w-full">
-                        <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-50">
-                            <tr>
-                                <th class="p-2 whitespace-nowrap">
-                                    <div class="font-semibold text-left">Nom</div>
-                                </th>
-                                <th class="p-2 whitespace-nowrap">
-                                    <div class="font-semibold text-left">Promo</div>
-                                </th>
-                                <th class="p-2 whitespace-nowrap">
-                                    <div class="font-semibold text-left">Année</div>
-                                </th>
-                                <th class="p-2 whitespace-nowrap">
-                                    <div class="font-semibold text-center">Adresse ETH</div>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody class="text-sm divide-y divide-gray-100">
-                            <tr>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="flex items-center">
-                                        <div class="font-medium text-gray-800">Alex Shatov</div>
-                                    </div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left">III</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left font-medium ">2021</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-lg text-center">73543</div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="flex items-center">
-                                        <div class="font-medium text-gray-800">Philip Harbach</div>
-                                    </div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left">III</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left font-medium ">2021</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-lg text-center">45375342</div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="flex items-center">
-                                        <div class="font-medium text-gray-800">Mirko Fisuk</div>
-                                    </div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left">III</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left font-medium ">2021</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-lg text-center">434368754</div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="flex items-center">
-                                        <div class="font-medium text-gray-800">Olga Semklo</div>
-                                    </div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left">III</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left font-medium ">2021</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-lg text-center">438734</div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="flex items-center">
-                                        <div class="font-medium text-gray-800">Burak Long</div>
-                                    </div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left">III</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-left font-medium ">2021</div>
-                                </td>
-                                <td class="p-2 whitespace-nowrap">
-                                    <div class="text-lg text-center">156473</div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-	
-  </body>
+		<!-- component -->
+		<section class="antialiased text-gray-600 h-screen px-4" >
+			<div class="flex flex-col justify-center h-full">
+				<!-- Table -->
+				<div class="w-full max-w-2xl mx-auto bg-white shadow-lg rounded-sm border border-gray-200">
+					<header class="px-5 py-4 border-b border-gray-100">
+						<h2 class="font-semibold text-gray-800">Diplômés</h2>
+					</header>
+					<div class="p-3">
+						<div class="overflow-x-auto">
+							<table class="table-auto w-full">
+								<thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-50">
+									<tr>
+										<th class="p-2 whitespace-nowrap">
+											<div class="font-semibold text-left">Nom</div>
+										</th>
+										<th class="p-2 whitespace-nowrap">
+											<div class="font-semibold text-left">Promo</div>
+										</th>
+										<th class="p-2 whitespace-nowrap">
+											<div class="font-semibold text-left">Année</div>
+										</th>
+										<th class="p-2 whitespace-nowrap">
+											<div class="font-semibold text-center">Adresse ETH</div>
+										</th>
+									</tr>
+								</thead>
+								<tbody class="text-sm divide-y divide-gray-100">
+									<tr>
+										<td class="p-2 whitespace-nowrap">
+											<div class="flex items-center">
+												<div class="font-medium text-gray-800">Alex Shatov</div>
+											</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left">III</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left font-medium ">2021</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-lg text-center">73543</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="p-2 whitespace-nowrap">
+											<div class="flex items-center">
+												<div class="font-medium text-gray-800">Philip Harbach</div>
+											</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left">III</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left font-medium ">2021</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-lg text-center">45375342</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="p-2 whitespace-nowrap">
+											<div class="flex items-center">
+												<div class="font-medium text-gray-800">Mirko Fisuk</div>
+											</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left">III</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left font-medium ">2021</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-lg text-center">434368754</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="p-2 whitespace-nowrap">
+											<div class="flex items-center">
+												<div class="font-medium text-gray-800">Olga Semklo</div>
+											</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left">III</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left font-medium ">2021</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-lg text-center">438734</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="p-2 whitespace-nowrap">
+											<div class="flex items-center">
+												<div class="font-medium text-gray-800">Burak Long</div>
+											</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left">III</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-left font-medium ">2021</div>
+										</td>
+										<td class="p-2 whitespace-nowrap">
+											<div class="text-lg text-center">156473</div>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+</body>
