--- a/admin.html
+++ b/admin.html
@@ -25,7 +25,7 @@
 </nav>
 
 <body>
-	<div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+	<div class="contact-form min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
 		<div class="max-w-md w-full space-y-8">
 			<div class=" rounded bg-white max-w-md rounded overflow-hidden shadow-xl p-5">
 
