--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,5 @@
 <head>
-	<script src="scripts/main.js" type="text/javascript"></script>
+	
 	<link href="https://unpkg.com/tailwindcss@^1	.0/dist/tailwind.min.css" rel="stylesheet" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.0-rc.0/web3.min.js"></script>
 	<meta charset="UTF-8">
@@ -25,11 +25,11 @@
 </nav>
 
 <body>
-	<div class="contact-form min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+	<div class=" min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
 		<div class="max-w-md w-full space-y-8">
 			<div class=" rounded bg-white max-w-md rounded overflow-hidden shadow-xl p-5">
 
-				<form class="space-y-4">
+				<form class="contact-form space-y-4">
 					<div class="rounded-md shadow-sm -space-y-px">
 						<div class="grid gap-6">
 							<div class="col-span-12">
@@ -61,7 +61,7 @@
 					</div>
 
 					<div>
-						<button type="submit"
+						<button type = "submit"
 							class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
 							Générer un diplôme
 						</button>
@@ -187,3 +187,5 @@
 		</section>
 
 </body>
+
+<script src="scripts/main.js" type="text/javascript"></script>
