--- a/admin.html
+++ b/admin.html
@@ -2,6 +2,7 @@
 	
 	<link href="https://unpkg.com/tailwindcss@^1	.0/dist/tailwind.min.css" rel="stylesheet" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.0-rc.0/web3.min.js"></script>
+	<script src="scripts/wallet.js"></script>
 	<meta charset="UTF-8">
 </head>
 
@@ -25,13 +26,12 @@
 </nav>
 
 <body>
-	<div class=" min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+	<div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
 		<div class="max-w-md w-full space-y-8">
-			<div class=" rounded bg-white max-w-md rounded overflow-hidden shadow-xl p-5">
-
-				<form class="contact-form space-y-4">
+			<div class="contact-form rounded bg-white max-w-md rounded overflow-hidden shadow-xl p-5">
+				<form>
 					<div class="rounded-md shadow-sm -space-y-px">
-						<div class="grid gap-6">
+						<div class="grid gap-6 input-group ">
 							<div class="col-span-12">
 								<label class="block text-sm font-medium text-gray-700">Nom</label>
 								<input type="text"  id="nom"
@@ -188,4 +188,4 @@
 
 </body>
 
-<script src="scripts/main.js" type="text/javascript"></script>
+<script src="scripts/admin.js" type="text/javascript"></script>
