--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <head>
-  <script src="scripts/main.js" type="text/javascript"></script>
+  <script src="scripts/index.js" type="text/javascript"></script>
+  <script src="scripts/wallet.js" type="text/javascript"></script>
   <link href="https://unpkg.com/tailwindcss@^1	.0/dist/tailwind.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.0-rc.0/web3.min.js"></script>
   <meta charset="UTF-8">
-<script type="module" src="scripts/index.js"></script>
+
 </head>
 
 <nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6">
@@ -27,8 +28,8 @@
   <main class="p-10 flex justify-center min-h-full">
 		<div class="w-4/5">
 		  <div class="mb-10">	
-			<button id="load_button" class="border-2 border-blue-500 bg-blue-700 text-white transition-colors px-4 outline-none py-1 uppercase rounded-md text-xl font-semibold">
-			  Load NFTs
+			<button id="load_button" class="border-2 border-teal-500 bg-teal-700 text-white transition-colors px-4 outline-none py-1 uppercase rounded-md text-xl font-semibold">
+			  Afficher les diplômes
 			</button>
 		  </div>
 	
