--- a/admin.html
+++ b/admin.html
@@ -33,23 +33,43 @@
 					<div class="rounded-md shadow-sm -space-y-px">
 						<div class="grid gap-6 input-group ">
 							<div class="col-span-12">
-								<label class="block text-sm font-medium text-gray-700">Nom</label>
-								<input type="text"  id="nom"
+								<label class="block text-sm font-medium text-gray-700">Nom du diplôme</label>
+								<input type="text"  id="nom_diplome"
 									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
 							<div class="col-span-12">
-								<label class="block text-sm font-medium text-gray-700">Prénom</label>
-								<input type="text" id="prenom"
-									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
-							</div>
-							<div class="col-span-12">
-								<label class="block text-sm font-medium text-gray-700">Promo</label>
-								<input type="text" id="promo"
+								<label class="block text-sm font-medium text-gray-700">Nom de lécole</label>
+								<input type="text" id="nom_ecole"
 									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
 							<div class="col-span-12">
 								<label class="block text-sm font-medium text-gray-700">Année</label>
 								<input type="text" id="annee"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+							</div>
+							<div class="col-span-12">
+								<label class="block text-sm font-medium text-gray-700">Description</label>
+								<input type="text" id="description"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+							</div>
+							<div class="col-span-12">
+								<label class="block text-sm font-medium text-gray-700">Nom de l'élève</label>
+								<input type="text" id="nom"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+							</div>
+							<div class="col-span-12">
+								<label class="block text-sm font-medium text-gray-700">Prénom de l'élève</label>
+								<input type="text" id="prenom"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+							</div>
+							<div class="col-span-12">
+								<label class="block text-sm font-medium text-gray-700">Date de naissance</label>
+								<input type="text" id="date_naissance"
+									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
+							</div>
+							<div class="col-span-12">
+								<label class="block text-sm font-medium text-gray-700">Lieu de naissance</label>
+								<input type="text" id="lieu_naissance"
 									class="mt-1 focus:ring-teal-500 focus:border-teal-500 block w-full shadow-sm sm:text-sm border-gray-500 rounded-md">
 							</div>
 							<div class="col-span-12">
